# OptimalPortfolios

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  sp_screener.ipynb
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
examples/: gaussian_mixure_scatter.py  portfolio_opt_backtest.py
examples/crypto_allocation/: article_figures.py  backtest_crypto_portfolios.py  load_prices.py
my_projects/: check_soc.py  ewma_corr_backtest.py
optimalfolios/examples/: gaussian_mixure_scatter.py
optimalfolios/examples/crypto_allocation/: backtest_crypto_portfolios.py  crypto_allocation_prices.csv  load_prices.py
optimalfolios/optimization/: qp_solvers.py
optimalfolios/reports/: marginal_backtest.py
optimalfolios/utils/: gaussian_mixture.py
optimalportfolios/: __init__.py  _optional.py  config.py  local_path.py  settings.yaml  test_data.py
optimalportfolios/alphas/: README.md  __init__.py  alpha_data.py  backtest_alphas.py  signal_diagnostics.py
optimalportfolios/alphas/profile/: __init__.py  core.py  profile_alpha_signals.py  signal_profilers.py
optimalportfolios/alphas/signals/: __init__.py  carry.py  low_beta.py  low_beta_cluster.py  managers_alpha.py  momentum.py  momentum_cluster.py  residual_momentum.py  residual_momentum_cluster.py  residual_reversal.py  rolling_ewma_mean.py  utils.py
optimalportfolios/alphas/tests/: test_signal_diagnostics.py
optimalportfolios/covar_estimation/: README.md  __init__.py  annualisation.py  config.py  covar_estimator.py  covar_reporting.py  current_covar.py  ewma_covar_estimator.py  factor_covar_data.py  factor_covar_estimator.py  risk_labelling.py  rolling_covar.py  utils.py
optimalportfolios/covar_estimation/examples/: demo_covar_different_estimation_freqs.py  simulate_factor_returns.py
optimalportfolios/covar_estimation/tests/: ewma_covar_estimator_test.py  factor_covar_estimator_test.py
optimalportfolios/docs/: examples_readme.md  optimization_module_readme.md  overlay_tail_floor.md
optimalportfolios/examples/: computation_of_tracking_error.py  equal_factor_budget.py  lasso_covar_estimation.py  lasso_estimation.py  lasso_risk_model.py  long_short_optimisation.py  multi_covar_estimation_backtest.py  multi_optimisers_backtest.py  optimal_portfolio_backtest.py  parameter_sensitivity_backtest.py  risk_budgeting_pyrb_vs_scipy.py  risk_contribution_balanced_portfolio.py  solve_risk_budgets_balanced_portfolio.py  sp500_minvar.py  sp500_universe.py  universe.py
optimalportfolios/examples/backtests/: balanced_risk_budgets.py  minimal_backtest.py  multiasset_saa.py
optimalportfolios/examples/comparisons/: covar_estimators.py  drift_policy.py  optimisers.py  parameter_sensitivity.py  risk_budgeting_ccd_vs_scipy.py  sp500_minvar_spans.py
optimalportfolios/examples/covar_estimation/: demo_covar_different_estimation_freqs.py  lasso_covar_estimation.py
optimalportfolios/examples/crypto_allocation/: README.md  article_figures.py  backtest_crypto_portfolios.py  backtest_portfolios_for_article.py  gaussian_mixure_scatter.py  load_prices.py  perf_crypto_portfolios.py
optimalportfolios/examples/data/: fxmacrodata_calendar.py  multiasset.py  multiasset_returns.csv  sp500_universe.py  test_data.py  universe.py
optimalportfolios/examples/resources/: dow30_prices.csv
optimalportfolios/examples/robust_optimisation_saa_taa/: README.md  hcgl_covar_for_rolling_backtest.py
optimalportfolios/examples/robust_optimisation_saa_taa_for_mac/: hcgl_covar_for_rolling_backtest.py
optimalportfolios/examples/solvers/: carra_mixture.py  long_short.py  max_diversification.py  max_sharpe.py  min_variance.py  overlay_tail_floor.py  risk_budgeting.py  risk_parity.py  target_return.py  tracking_error.py
optimalportfolios/lasso/: README.md  __init__.py  lasso_estimator.py  lasso_model_estimator.py
optimalportfolios/lasso/tests/: lasso_estimation.py  lasso_estimator_test.py
optimalportfolios/optimization/: README.md  __init__.py  config.py  constraints.py  engine.py  nonlinear_solvers.py  portfolio_result.py  quadratic_solvers.py  rolling_portfolios.py  solver_diagnostics.py  wrapper_rolling_portfolios.py
optimalportfolios/optimization/general/: __init__.py  carra_mixture.py  max_diversification.py  max_sharpe.py  quadratic.py  risk_budgeting.py  risk_budgeting_solver.py
optimalportfolios/optimization/rolling/: max_mixture_carra.py  max_utility_sharpe.py  risk_based.py
optimalportfolios/optimization/saa/: __init__.py  max_return_target_vol.py  min_variance_target_return.py
optimalportfolios/optimization/solvers/: __init__.py  carra_mixure.py  max_diversification.py  max_sharpe.py  nonlinear.py  quadratic.py  risk_budgeting.py  risk_parity.py  target_return.py  tracking_error.py
optimalportfolios/optimization/taa/: __init__.py  maximise_alpha_over_tre.py  (+1 more)
optimalportfolios/reports/: __init__.py  backtest_alphas.py  config.py  marginal_backtest.py  portfolio_result_plots.py  portfolio_result_pybloqs.py
optimalportfolios/universe/: __init__.py  universe_data.py  universe_transforms.py
optimalportfolios/utils/: __init__.py  covar_matrix.py  factor_alphas.py  filter_nans.py  gaussian_mixture.py  lasso.py  manager_alphas.py  portfolio_funcs.py  returns_unsmoother.py  weights_drift.py
optimization/: opt_solvers.py  rolling_portfolios.py
paper_code/: README.md
paper_code/achievable_sharpe_faj_2026/: README.md  build_caches.py  conftest.py  identity_analytics.py  paper_inputs.py  run_bootstrap.py  run_exhibits.py
paper_code/crypto_allocation_risk_2023/: article_figures.py  backtest_portfolios_for_article.py  load_prices.py  perf_crypto_portfolios.py
paper_code/matf_cma_jpm_2026/: .gitignore  README.md  bootstrap_frontier_analytics.py  build_paper_inputs.py  conftest.py  figures.py  paper_inputs.py  requirements.txt  run_bootstrap.py  run_optimisation.py  run_sensitivity.py  universe.py
pyrb/: README.md  __init__.py  allocation.py  settings.py  solvers.py  tools.py  validation.py
reports/: config.py
(+37 files in other folders)
