[tool.poetry]
name = "optimalfolios"
version = "1.0.2"
description = "Simulation and backtesting of optimal portfolios"
license = "LICENSE.txt"
authors = ["Artur Sepp <artursepp@gmail.com>"]
maintainers = ["Artur Sepp <artursepp@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ArturSepp/OptimalPortfolios"
documentation = "https://github.com/ArturSepp/OptimalPortfolios"
keywords= ["quantitative", "investing", "portfolio optimization", "systematic strategies", "volatility"]
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "optimalfolios"} ]

[tool.poetry.urls]
"Issues" = "https://github.com/ArturSepp/OptimalPortfolios/issues"
"Personal website" = "https://artursepp.com"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.22.4"
numba = ">=0.56.0"
scipy = ">=1.9.0"
pandas = ">=1.5.3"
matplotlib = ">=3.5.2"
seaborn = ">=0.11.2"
scikit_learn = ">=1.3.0"
cvxpy = ">=1.3.2"
qis = ">=2.0.1"
cryptocmd = ">=0.6.1"
pybloqs = ">=1.2.13"
setuptools = ">=63.2.0"
yfinance = ">=0.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
