[tool.poetry]
name = "optimalportfolios"
version = "3.3.5"
description = "Simulation and backtesting of optimal portfolios"
license = "LICENSE.txt"
authors = ["Artur Sepp <artursepp@gmail.com>"]
maintainers = ["Artur Sepp <artursepp@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ArturSepp/OptimalPortfolios"
documentation = "https://github.com/ArturSepp/OptimalPortfolios"
keywords= ["quantitative", "investing", "portfolio optimization", "systematic strategies", "volatility"]
classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Console",
        "Intended Audience :: Financial and Insurance Industry",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3 :: Only",
        "Topic :: Office/Business :: Financial :: Investment",
    ]
packages = [ {include = "optimalportfolios"},
             {include = "pyrb"}]
exclude=["optimalportfolios/examples/figures",
         "optimalportfolios/examples/crypto_allocation/data"]

[tool.poetry.urls]
"Issues" = "https://github.com/ArturSepp/OptimalPortfolios/issues"
"Personal website" = "https://artursepp.com"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.26.4"
numba = ">=0.59.0"
scipy = ">=1.12.0"
pandas = ">=2.2.0"
matplotlib = ">=3.8.3"
seaborn = ">=0.13.2"
scikit_learn = ">=1.3.0"
cvxpy = ">=1.3.2"
qis = ">=2.1.1"
pybloqs = ">=1.2.13"
setuptools = ">=69.1.1"
yfinance = ">=0.2.37"
psycopg2 = ">=2.9.5"
quadprog = ">=0.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
