[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimalportfolios"
version = "5.0.4"
description = "Implementation of optimisation analytics for constructing and backtesting optimal portfolios in Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
maintainers = [
    {name = "Artur Sepp", email = "artursepp@gmail.com"},
]
keywords = [
    "portfolio optimization",
    "quantitative finance",
    "asset allocation",
    "risk budgeting",
    "backtesting",
    "covariance estimation",
    "lasso regularization",
    "cvxpy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "cvxpy>=1.3.0",
    "quadprog>=0.1.11",
    "qis>=4.0.1",
    "factorlasso>=0.1.5",
]

[project.optional-dependencies]
data = [
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10.0",
]

reports = [
    "pybloqs>=1.2.13",
    "jinja2>=3.0.0",
]

visualization = [
    "plotly>=5.0.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "jupyterlab>=3.0.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4",
]

all = [
    "optimalportfolios[data,reports,visualization,jupyter]",
]

[project.urls]
Homepage = "https://github.com/ArturSepp/OptimalPortfolios"
Documentation = "https://github.com/ArturSepp/OptimalPortfolios/blob/master/README.md"
Repository = "https://github.com/ArturSepp/OptimalPortfolios.git"
Issues = "https://github.com/ArturSepp/OptimalPortfolios/issues"

[tool.setuptools.packages.find]
include = ["optimalportfolios*", "pyrb*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
optimalportfolios = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["optimalportfolios"]
omit = ["*/tests/*", "*/examples/*"]